k8s/tuna.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuna
  namespace: vmservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tuna
  template:
    metadata:
      labels:
        app: tuna
    spec:
      containers:
        - name: tuna
          image: yuccastream/tuna:latest
          command: ["tuna", "http", "80", "--domain", "vmautoservice.ru"]
          resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "50m"
